Archive2/af/b49857ed097761/main.cpp

struct Y {

        explicit Y(int) {}
    };
    
struct X 
    {
    template <typename T> 
    operator T() { return T(); }
    };

int main()
{
X x;
Y y(x); 
}
